k8s/bankai-daemon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankai-daemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankai-daemon
  template:
    metadata:
      labels:
        app: bankai-daemon
    spec:
      containers:
        - name: bankai-daemon
          ### placeholder to be set by cicd pipeline - dont change
          image: <IMAGE>
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '1'
              memory: '2G'
          livenessProbe:
            httpGet:
              path: /is-alive
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /is-alive
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: bankai-daemon-service
spec:
  selector:
    app: bankai-daemon
  ports:
    - port: 3001
      targetPort: 3001
